fix text overflow

--- a/blocks/gallery.css
+++ b/blocks/gallery.css
@@ -13,12 +13,11 @@
   border-radius: 10px;
   overflow: hidden;
   max-height: 361px;
-  display: flex;
-  flex-direction: column;
 }
 
 .gallery__image {
-  width: 100%;
+  display: block;
+  max-width: 100%;
   aspect-ratio: 1 / 1;
   object-fit: cover;
   object-position: center;
@@ -27,22 +26,23 @@
 .gallery__inner {
   background-color: var(--bg-light);
   height: 100%;
-  padding-inline: 21px;
-  padding-block: 25px 31px;
+  padding-inline: 21px 15px;
+  padding-block: 23px 31px;
   display: flex;
-  gap: 10px;
+  gap: 7px;
   align-items: center;
   justify-content: space-between;
 }
 
 .gallery__title {
+  margin: 0;
+  font-size: var(--fs-l);
+  line-height: var(--lh-l);
+  font-weight: var(--fw-bold);
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
-  margin: 0;
-  font-size: var(--fs-m);
-  line-height: var(--lh-m);
-  font-weight: var(--fw-bold);
+  max-width: 210px;
 }
 
 .gallery__button {
@@ -59,5 +59,8 @@
 @media (max-width: 430px) {
   .gallery {
     --margin-top: 36px;
+  }
+  .gallery__title {
+    max-width: 180px;
   }
 }
